--- a/week6/index.qmd
+++ b/week6/index.qmd
@@ -24,6 +24,7 @@ library(palmerpenguins)
 library(tidyr)
 library(dplyr)
 library(ggplot2)
+library(RColorBrewer)
 names(penguins)[names(penguins) == "sex"] <- "gender"
 penguins_complete <- penguins |>
   drop_na()
@@ -175,7 +176,8 @@ pf2 |>
   geom_bar(stat = 'identity', position = 'dodge') + 
  geom_text(aes(label =  n), 
             position = position_dodge(width = 0.9), vjust = -0.5, color = "black") +
-labs(x = "BMI Category", fill ="Species", y="Counts")
+labs(x = "BMI Category", fill ="Species", y="Counts") +
+scale_fill_brewer(palette = "Dark2")
 
 ```
 
@@ -205,7 +207,7 @@ p3 <- ggplot(pf4, aes(x = factor(BMI_category), y = col_percentage, fill = facto
             position = position_dodge(width = 0.9), vjust = -0.5, color = "black") +
   labs(x = "BMI Category", fill = "Species", y = "Percentage") +
   ylim(0, 100) +  # Ensure y-axis starts from 0 and ends at 100
-  theme_minimal() 
+ scale_fill_brewer(palette = "Dark2")
 p3
 ```
 
@@ -232,7 +234,8 @@ pf2 |>
             position = position_stack(vjust = 0.5), 
             size = 3, 
             color = "white") +
-labs(x = "BMI Category", fill ="Species", y="Counts")
+labs(x = "BMI Category", fill ="Species", y="Counts") +
+scale_fill_brewer(palette = "Dark2")
 
 ```
 
@@ -248,31 +251,22 @@ knitr::include_graphics("tab2.png")
 ### Percentages
 
 ```{r}
-# Calculate percentages
-pf5 <- pf2 %>%
-  count(species, BMI_category) %>%
-  group_by(BMI_category) %>%
-  mutate(col_percentage = n / sum(n) * 100) %>%
-  ungroup()
-
-# Plotting code for stacked bar chart and text annotations
-p4 <- ggplot(pf5, aes(x = factor(BMI_category), y = col_percentage, fill = factor(species))) +
-  geom_bar(stat = 'identity', position = 'stack') +
-  labs(x = "BMI Category", fill = "Species", y = "Percentage") +
-  ylim(0, 100) +  # Ensure y-axis starts from 0 and ends at 100
-  theme_minimal() +
-  geom_text(aes(label = paste0(round(col_percentage, 1), "%")),
-            position = position_stack(vjust = 0.5), 
-            size = 3, 
-            color = "white")  # Adjust text position and appearance as needed
-
-print(p4)
+pf2 |>
+  count(BMI_category, species) |>      
+  group_by(BMI_category) |>
+  mutate(pct= prop.table(n) * 100) %>%
+  ggplot() + aes(BMI_category, pct, fill=species) +
+  geom_bar(stat="identity") +
+  ylab("Percentage") +
+  xlab("BMI Category")+
+  geom_text(aes(label=paste0(sprintf("%1.1f", pct),"%")),
+            position=position_stack(vjust=0.5)) + scale_fill_brewer(palette = "Dark2")
 ```
+
+
 
 :::
 
 ::::
 
- 
 
-<!--https://afit-r.github.io/barcharts-->
